added mission statement

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	
 <h1>Welcome</h1>
 {% include image.html url="/images/cics-resist-logo2.png" caption="" width=300 align="center" %}	
-<p>Lorems ipsum dolor sit amet, consectetur adipiscing elit. Nunc blandit mattis nulla eu cursus. Fusce finibus, orci sit amet tincidunt fermentum, risus ante pharetra nisi, eget tempus tellus tellus ut est. Nunc tempus cursus arcu mattis ultricies. Cras volutpat purus et lectus facilisis tempor. Suspendisse at lorem feugiat, feugiat massa vel, scelerisque dolor. Proin justo nisl, mattis eu sapien in, efficitur fringilla nulla. Phasellus placerat, lacus in venenatis tristique, risus dolor eleifend felis, vitae finibus augue nibh ut libero. Morbi sit amet tincidunt lorem.</p>
+<p>Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives.</p>
 
 
 <br>
