--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: default
 <div class="home">
 	
 <h1>Welcome</h1>
-{% include image.html url="/images/cics-resist-logo2.png" caption="" width=300 align="center" %}	
-<p>Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives.</p>
+{% include image.html url="/images/light_bulb.jpg" caption="" width=300 align="center" %}	
+<p><font size="4">Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives.</font></p>
 
 
 <br>
