--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	
 <h1>Welcome</h1>
 {% include image.html url="/images/cics-resist-logo.jpg" caption="" width=300 align="center" %}	
-<p><div class="mission">Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives</div></p>
+<p class="mission">Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives.</p>
 
 
 <br>
