--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@ layout: default
 <h1>Welcome</h1>
 <!--{% include image.html url="/images/cics-resist-logo-small.jpg" caption="" width=300 align="center" %}	-->
 
-<img src="/images/cics-resist-logo-small.jpg" alt="I heard the Konami code was cool!" width=300 align="center">
+
+<dl id="" class="wp-caption center" style="max-width: 300px">
+
+    <dt><img class=""  src="/images/cics-resist-logo-small.jpg" alt="I heard the Konami code was cool" /></dt>
+
+<dd></dd>
+</dl>
+
 <div id="mission"><font size="6">Our mission is to resist discrimination, the rejection of scientific fact, hate speech, and fascism. We refuse to use our skills in ways that conflict with this mission, and urge employers to publicly stand with us. We support and advocate for the work of individuals and groups that align with our objectives.</font></div>
 
 
