--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 
 <dl id="" class="wp-caption center" style="max-width: 300px">
 
-    <dt><img class=""  src="/images/cics-resist-logo-small.jpg" alt="I heard the Konami code was cool" /></dt>
+    <dt><img class=""  src="/images/cics-resist-logo-small.jpg" alt="I heard the Konami code was cool" align="center"/></dt>
 
 <dd></dd>
 </dl>
